--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,19 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+      <version>0.2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.6.12</version>
+    </dependency>
+    <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.6.15</version>
+      <version>1.7.0</version>
     </dependency>
     <!--suppress VulnerableLibrariesLocal -->
     <dependency>
@@ -82,6 +92,35 @@
             </exclude>
           </excludes>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>5.3.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>
+                ${project.basedir}/src/main/resources/static/openapi.yaml
+              </inputSpec>
+              <generatorName>spring</generatorName>
+              <apiPackage>ru.skypro.homework.openapi.api</apiPackage>
+              <modelPackage>ru.skypro.homework.openapi.model</modelPackage>
+              <supportingFilesToGenerate>
+                ApiUtil.java
+              </supportingFilesToGenerate>
+<!--              <generateApis>false</generateApis>-->
+              <configOptions>
+                <delegatePattern>true</delegatePattern>
+<!--                <interfaceOnly>true</interfaceOnly>-->
+              </configOptions>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
